[tool.poetry]
name = "grab_the_pulis"
version = "0.1.0"
description = ""
authors = ["kenghweeng"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = { version = "^1.8.0", python = ">=3.8,<3.11" }
geojson = "^2.5.0"
folium = "^0.12.1"
ipyleaflet = "^0.15.0"
osmnx = "^1.1.2"
mapclassify = "^2.4.3"
seaborn = "^0.11.2"
plotly = "^5.5.0"
pandas-profiling = "^3.1.0"
jupyterlab = "^3.2.9"
jupyter = "^1.0.0"
ipykernel = "^6.8.0"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
